[gd_scene load_steps=16 format=2]

[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/road.png" type="Texture" id=2]
[ext_resource path="res://assets/mountain.png" type="Texture" id=3]
[ext_resource path="res://assets/city.png" type="Texture" id=4]
[ext_resource path="res://Level.gd" type="Script" id=5]
[ext_resource path="res://assets/Bubblegum.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/decor-bg.png" type="Texture" id=7]
[ext_resource path="res://assets/bushes-bg.png" type="Texture" id=8]
[ext_resource path="res://assets/music.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.5998, 54.5 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 140
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Animation" id=8]
resource_name = "GameTitleMove"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("GameTitle:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GameTitle:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 640, 1450 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -345 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 640, 1450 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color( 1, 1, 1, 0.682353 )
position = Vector2( 0, -249 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 960, 2175 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 0, -627 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 900, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 449, 893 )
scale = Vector2( 10, 4 )
texture = ExtResource( 2 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.79, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1023, 755 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 1536, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 769, 772 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 269, 483 )
current = true
smoothing_speed = 10.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 1902, 950 )
scale = Vector2( 64.0312, 1 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.390434, -31 )
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 763 )
scale = Vector2( 2, 2 )

[node name="Objects" type="Node2D" parent="."]

[node name="PlayerStartPoint" type="Node2D" parent="."]
position = Vector2( 272, 763 )

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2( 604, 804 )

[node name="DespawnPoint" type="Node2D" parent="."]
position = Vector2( -62, 798 )

[node name="ObjectSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreText" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = 23.0
margin_right = 467.0
margin_bottom = 423.0
rect_clip_content = false
custom_colors/default_color = Color( 0.956863, 0.858824, 0.419608, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "SCORE:
HIGHSCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="ScoreText"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 49.0
margin_top = -200.0
margin_right = 499.0
margin_bottom = 200.0
rect_clip_content = false
custom_colors/default_color = Color( 0.956863, 0.858824, 0.419608, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "0
0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = 121.0
margin_right = 467.0
margin_bottom = 521.0

[node name="Difficulty" type="RichTextLabel" parent="Debug"]
margin_right = 450.0
margin_bottom = 400.0
rect_clip_content = false
custom_colors/default_color = Color( 0.956863, 0.858824, 0.419608, 1 )
custom_fonts/normal_font = SubResource( 7 )
text = "Difficulty:
0
0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 540.0
margin_bottom = 960.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="RichTextLabel" parent="StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -303.0
margin_right = 233.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 225, 155 )
rect_clip_content = false
custom_colors/default_color = Color( 0.956863, 0.858824, 0.419608, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "GOOSE
RUN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="StartScreen"]
margin_left = 116.0
margin_top = 525.0
margin_right = 427.0
margin_bottom = 638.0
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 9 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="StartScreen"]
anims/GameTitleMove = SubResource( 8 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -13.045
autoplay = true

[node name="HurtSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.146

[node name="DeathSoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -7.61

[connection signal="timeout" from="ObjectSpawnTimer" to="." method="_on_ObjectSpawnTimer_timeout"]
[connection signal="pressed" from="StartScreen/StartButton" to="." method="_on_StartButton_pressed"]
